various tweaks and updates

--- a/root.tex
+++ b/root.tex
@@ -47,6 +47,7 @@
 \newcommand{\UTIASdocument}{UTIAS Report Template}
 \newcommand{\UTIASrevision}{}
 \newcommand{\UTIASauthor}{Sepehr Samavi}
+\newcommand{\UTIASshortauthor}{S Samavi} % for header
 \newcommand{\UTIASemail}{\href{mailto:example@example.com}{example@example.com}}
 \newcommand{\UTIASreviewer}{}
 % The date for the document in format: {dd}{mm}{yyyy}
